@@ -1,6 +1,13 @@
 * Current
 
-  - Fix: #131. For non-Org files, now the transcluded text respects the indent
+  - Feature ::
+
+    - add: #145 a new property and filter to expand links to absolute file names (Org only)
+      use :expand-links per transclusion
+
+  - Fix ::
+  
+    - fix: #131. For non-Org files, now the transcluded text respects the indent
          level of the #+transclude keyword.  This does not affect Org files.
 
 * Version 1.2.0
